force-app/main/default/objects/breg_DBEDT_Report__c/breg_DBEDT_Report__c.object-meta.xml
<CustomObject>
    <label>DBEDT Report</label>
    <nameField>
        <label>DBEDT Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DBEDT Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>