force-app/main/default/objects/breg_DBEDT_Report__c/fields/breg_DBEDT_Entity_Type__c.field-meta.xml
<CustomField>
    <fullName>breg_DBEDT_Entity_Type__c</fullName>
    <label>DBEDT Entity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Domestic LLC</fullName>
            </value>
            <value>
                <fullName>Domestic LLP</fullName>
            </value>
            <value>
                <fullName>Domestic Corporation</fullName>
            </value>
            <value>
                <fullName>Non-Domestic LLC</fullName>
            </value>
            <value>
                <fullName>Non-Domestic LLP</fullName>
            </value>
            <value>
                <fullName>Non-Domestic Corporation</fullName>
            </value>
            <value>
                <fullName>Partnership</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>