force-app/main/default/objects/breg_DBEDT_Report__c/fields/breg_DBEDT_Unique_Key__c.field-meta.xml
<CustomField>
    <fullName>breg_DBEDT_Unique_Key__c</fullName>
    <externalId>true</externalId>
    <label>DBEDT Unique Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>