force-app/main/default/objects/breg_DBEDT_Report__c/fields/breg_Dis_Merge_Count__c.field-meta.xml
<CustomField>
    <fullName>breg_Dis_Merge_Count__c</fullName>
    <label>Dis Merge Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>