force-app/main/default/objects/breg_DBEDT_Report__c/fields/breg_End_Active_Count__c.field-meta.xml
<CustomField>
    <fullName>breg_End_Active_Count__c</fullName>
    <label>End Active Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>