force-app/main/default/objects/breg_DBEDT_Report__c/fields/breg_Period_Begin_Date__c.field-meta.xml
<CustomField>
    <fullName>breg_Period_Begin_Date__c</fullName>
    <label>Period Begin Date</label>
    <type>Date</type>
</CustomField>